chore: adicionado validator para o input de CPF

--- a/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.scss
+++ b/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.scss
@@ -1,5 +1,18 @@
 .container-fluid {
   background-color: #d8d8d8;
+
+  form {
+    gap: 30px;
+
+    input, button {
+      height: 40px;
+    }
+
+    #cpf-input {
+      width: 20%;
+    }
+  }
+  
 }
 
 .informe-titulo {
