--- a/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.html
+++ b/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.html
@@ -4,16 +4,40 @@
       <span class="informe-titulo">Informe o CPF do futuro coopeerado (a)</span>
       <p class="informe-subtitulo">
         Se necessário, você poderá duplicar uma conta existente ou pausar e
-        retomar este cadastro futuramente. Digite apenas os números (sem pontos
-        ou traços).
+        retomar este cadastro futuramente. <br />
+        Digite apenas os números (sem pontos ou traços).
       </p>
     </div>
   </div>
-  <form>
-    <input type="text" name="cpf" appCpfMask />
-  </form>
 
-  <button class="btn btn-consultar">Consultar por CPF</button>
+  <div class="row">
+    <div class="col-xs-12">
+      <form [formGroup]="consultaForm" class="d-flex align-items-center">
+        <label for="cpf-input">CPF</label>
+        <input
+          type="text"
+          id="cpf-input"
+          [formControlName]="'cpf'"
+          name="cpf"
+          maxlength="14"
+          appCpfMask
+        />
+
+        <button [disabled]="!consultaForm.valid" class="btn btn-consultar">
+          Consultar por CPF
+        </button>
+      </form>
+      <p
+        class="text-danger"
+        *ngIf="
+          consultaForm.controls?.cpf?.value?.length === 14 &&
+          !consultaForm.valid
+        "
+      >
+        CPF inválido, por favor verificar o valor inserido
+      </p>
+    </div>
+  </div>
 
   <app-cpf-info-card></app-cpf-info-card>
 </div>
