--- a/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
+++ b/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid mt-4">
     <div class="row">
       <div class="col-xs-12 col-sm-4 card-info">
         <span class="info-situacao">Situação cadastral do CPF</span>
