feat: finalizado o componente de cards

--- a/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
+++ b/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
@@ -1,28 +1,66 @@
 <div class="container-fluid mt-4">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4 card-info">
-        <span class="info-situacao">Situação cadastral do CPF</span>
-        <p class="text-muted info-consulta">Consulta na Receita Federal</p>
+  <div class="row cards-wrapper">
+    <div class="col-xs-12 col-sm-3 card-info">
+      <span class="info-situacao">Situação cadastral do CPF</span>
+      <p class="text-muted info-consulta">Consulta na Receita Federal</p>
 
-        <div class="row info">
-          <div class="col-xs-12 col-sm-3">
-            <bi name="person-fill" class="person-icon icons"></bi>
-          </div>
-          <div class="col-xs-12 col-sm-9">
-            <span class="text-muted">Nome</span>
-            <p>Mariane de Sousa Oliveira</p>
-          </div>
+      <div class="row info">
+        <div class="col-xs-12 col-sm-3">
+          <bi name="person-fill" class="person-icon icons"></bi>
         </div>
+        <div class="col-xs-12 col-sm-9">
+          <span class="text-muted">Nome</span>
+          <p>Mariane de Sousa Oliveira</p>
+        </div>
+      </div>
 
-        <div class="row info">
-          <div class="col-xs-12 col-sm-3">
-            <bi name="check-circle" class="check-icon icons"></bi>
-          </div>
-          <div class="col-xs-12 col-sm-9">
-            <span class="text-muted">Situação do CPF</span>
-            <p>Regular</p>
-          </div>
+      <div class="row info">
+        <div class="col-xs-12 col-sm-3">
+          <bi name="check-circle" class="check-icon icons"></bi>
+        </div>
+        <div class="col-xs-12 col-sm-9">
+          <span class="text-muted">Situação do CPF</span>
+          <p>Regular</p>
         </div>
       </div>
     </div>
+
+    <div class="col-xs-12 col-sm-3 card-info">
+      <span class="info-situacao">Conta aplicação</span>
+      <p class="text-muted info-consulta">Cooperativa Viacredi</p>
+
+      <div class="row info">
+        <div class="col-xs-12 col-sm-3">
+          <bi name="credit-card" class="person-icon icons"></bi>
+        </div>
+        <div class="col-xs-12 col-sm-9">
+          <span class="text-muted">Número da conta</span>
+          <p>557932-4</p>
+        </div>
+      </div>
+
+      <div class="row info">
+        <a href="#">Duplicar conta</a>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-3 card-info">
+      <span class="info-situacao">Conta corrente</span>
+      <p class="text-muted info-consulta">Cooperativa Viacredi</p>
+
+      <div class="row info">
+        <div class="col-xs-12 col-sm-3">
+          <bi name="credit-card" class="person-icon icons"></bi>
+        </div>
+        <div class="col-xs-12 col-sm-9">
+          <span class="text-muted">Número da conta</span>
+          <p>778461-8</p>
+        </div>
+      </div>
+
+      <div class="row info">
+        <a href="#">Duplicar conta</a>
+      </div>
+    </div>
   </div>
+</div>
