--- a/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.html
+++ b/src/app/pages/main/componeents/CpfForm/cpf-form/cpf-form.component.html
@@ -1,43 +1,61 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12">
-      <span class="informe-titulo">Informe o CPF do futuro coopeerado (a)</span>
-      <p class="informe-subtitulo">
-        Se necessário, você poderá duplicar uma conta existente ou pausar e
-        retomar este cadastro futuramente. <br />
-        Digite apenas os números (sem pontos ou traços).
-      </p>
+  <main>
+    <div class="row">
+      <div class="col-xs-12">
+        <span class="informe-titulo"
+          >Informe o CPF do futuro coopeerado (a)</span
+        >
+        <p class="informe-subtitulo">
+          Se necessário, você poderá duplicar uma conta existente ou pausar e
+          retomar este cadastro futuramente. <br />
+          Digite apenas os números (sem pontos ou traços).
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-xs-12">
-      <form [formGroup]="consultaForm" class="d-flex align-items-center">
-        <label for="cpf-input">CPF</label>
-        <input
-          type="text"
-          id="cpf-input"
-          [formControlName]="'cpf'"
-          name="cpf"
-          maxlength="14"
-          appCpfMask
-        />
+    <div class="row">
+      <div class="col-xs-12">
+        <form [formGroup]="consultaForm" class="d-flex align-items-center">
+          <label for="cpf-input">CPF</label>
+          <input
+            type="text"
+            id="cpf-input"
+            [formControlName]="'cpf'"
+            name="cpf"
+            maxlength="14"
+            appCpfMask
+          />
 
-        <button [disabled]="!consultaForm.valid" class="btn btn-consultar">
-          Consultar por CPF
-        </button>
-      </form>
-      <p
-        class="text-danger"
-        *ngIf="
-          consultaForm.controls?.cpf?.value?.length === 14 &&
-          !consultaForm.valid
-        "
-      >
-        CPF inválido, por favor verificar o valor inserido
-      </p>
+          <button
+            (click)="consultar()"
+            [disabled]="!consultaForm.valid"
+            class="btn btn-consultar"
+          >
+            Consultar por CPF
+          </button>
+        </form>
+        <p
+          class="text-danger"
+          *ngIf="
+            consultaForm.controls?.cpf?.value?.length === 14 &&
+            !consultaForm.valid
+          "
+        >
+          CPF inválido, por favor verificar o valor inserido
+        </p>
+      </div>
     </div>
-  </div>
 
-  <app-cpf-info-card></app-cpf-info-card>
+    <app-cpf-info-card [exibirConsulta]="exibirConsulta"></app-cpf-info-card>
+  </main>  
 </div>
+<footer class="bg-white w-100">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 d-flex align-items-center gap-3">
+      <button class="btn btn-iniciar" *ngIf="exibirConsulta">
+        Iniciar nova Admissão
+      </button>
+      <button class="btn btn-dicas">Dicas para Admissão</button>
+    </div>
+  </div>
+</footer>
