--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="d-flex align-items-center bg-white py-3">
-  <div class="container">
-    <div class="row">
+  <div class="container-fluid">
+    <div class="row w-100">
       <div class="col-md-6">
         <h4 class="font-weight-bold">
           {{ "Nova Admissão Cooperado" | uppercase }}
