chore: finalizada implementação de ícones no menu lateral

--- a/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
+++ b/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-4" *ngIf="exibirConsulta">
+<div class="container-fluid mt-4 ml-4" *ngIf="exibirConsulta">
   <div class="row cards-wrapper">
     <div class="col-xs-12 col-sm-3 card-info">
       <span class="info-situacao">Situação cadastral do CPF</span>
