--- a/src/app/shared/layout/Navbar/navbar/navbar.component.html
+++ b/src/app/shared/layout/Navbar/navbar/navbar.component.html
@@ -1,14 +1,20 @@
-
-  <nav class="sidebar">
-    <img
-      src="https://www.ailos.coop.br/wp-content/uploads/2021/06/Icone_App_App-Ailos.svg"
-      alt="Viacredi"
-      width="100"
-      height="100"
-    />
+<nav class="sidebar d-none d-md-block">
+  <img
+    src="https://www.ailos.coop.br/wp-content/uploads/2021/06/Icone_App_App-Ailos.svg"
+    alt="Viacredi"
+    width="100"
+    height="100"
+  />
+  <div class="menu-icon-wrapper">
     <button class="btn btn-link" (click)="isCollapsed = !isCollapsed">
-      <h2>Sidebar</h2>
+      <bi name="list" id="list-icon"></bi>
     </button>
-    <div [ngbCollapse]="isCollapsed"></div>
-  </nav>
-
+  </div>
+  <div [ngbCollapse]="isCollapsed" class="icons-wrapper">
+    <bi name="search" class="icons"></bi>
+    <bi name="star" class="icons"></bi>
+    <bi name="chat-left-dots" class="icons"></bi>
+    <bi name="sliders" class="icons"></bi>
+    <bi name="bank" class="icons"></bi>
+  </div>
+</nav>
