chore: finalizada responsividade e repadronização da nomenclatura geral

--- a/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.scss
+++ b/src/app/pages/main/componeents/cpf-info-card/cpf-info-card.component.scss
@@ -48,3 +48,14 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .info-consulta, .info-situacao {
+    margin-left: 0;
+  }
+
+  .cards-wrapper {
+    padding: 0;
+    text-align: center;
+  }
+}
