--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="d-flex align-items-center bg-white py-3">
   <div class="container-fluid">
     <div class="row w-100">
-      <div class="col-md-6">
+      <div class="col-xs-12 col-md-6">
         <h4 class="font-weight-bold">
           {{ "Nova Admissão Cooperado" | uppercase }}
         </h4>
@@ -9,7 +9,7 @@
           Cadastro / Admissão do Cooperado / Nova Admissão de Cooperado
         </p>
       </div>
-      <div class="col-md-6 d-flex justify-content-end">
+      <div class="col-xs-12 col-md-6 d-flex right-content-wrapper">
         <div class="right-content d-flex align-items-center">
           <bi name="bell" class="bell-icon"></bi>
           <button class="btn btn-viacredi">Viacredi</button>
