chore: reordenação dos módulos

--- a/src/app/shared/layout/navbar/navbar.component.html
+++ b/src/app/shared/layout/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="sidebar d-none d-md-block" [ngbCollapse]="isCollapsed" [horizontal]="true">
   <img
     src="https://www.ailos.coop.br/wp-content/uploads/2021/06/Icone_App_App-Ailos.svg"
+    loading="lazy"
     alt="Viacredi"
     width="100"
     height="100"
