feat: criado shared service para controlar exibição do card e botão de admissão

--- a/src/app/pages/main/components/cpf-form/cpf-form.component.html
+++ b/src/app/pages/main/components/cpf-form/cpf-form.component.html
@@ -49,13 +49,5 @@
     <app-cpf-info-card [exibirConsulta]="exibirConsulta"></app-cpf-info-card>
   </main>
 </div>
-<footer class="bg-white w-100">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4 d-flex align-items-center gap-3">
-      <button class="btn btn-iniciar" *ngIf="exibirConsulta">
-        Iniciar nova Admissão
-      </button>
-      <button class="btn btn-dicas">Dicas para Admissão</button>
-    </div>
-  </div>
-</footer>
+
+<app-footer></app-footer>
