feat: adicionado stepper e finalizada aplicação

--- a/src/app/pages/main/components/cpf-form/components/footer/footer.component.html
+++ b/src/app/pages/main/components/cpf-form/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-white w-100">
+<footer class="bg-white w-100 d-none d-md-block">
   <div class="row">
     <div class="col-xs-12 col-sm-4 d-flex align-items-center gap-3">
       <button class="btn btn-iniciar" *ngIf="exibirBotao">
